# rtabmap_rgbd_scan_sim

./: README.md
src/: frames_2025-05-14_12.11.31.gv
src/my_robot_brightup/: CMakeLists.txt  package.xml
src/my_robot_brightup/config/: bot_rgbd_scan_nav2_params.yaml  demo_robot_mapping.rviz  diff_drive_bot.rviz  ekf.yaml  ekf_rtabmap.yaml  mapper_params_online_async.yaml  nav2_params.yaml  rtabmap_params.yaml  rtabmap_sim.rviz  sensor_bot.rviz  slam_bot.rviz  view_bot.rviz
src/my_robot_brightup/description/: camera.xacro  depth_camera (copy).xacro  depth_camera.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/my_robot_brightup/launch/: bot_rgbd_scan.launch.py  bringup_launch.py  launch_sim.launch.py  localization_launch.py  nav2_rtabmap_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  rtabmap_launch.py  turtlebot3_rgbd_scan.launch.py
src/my_robot_brightup/world/: house.world  house1.world  house2.world  obstacles.world  room.world
src/my_robot_brightup/world/house/: model.sdf
src/my_robot_brightup/world/house/Untitled/: model.sdf
src/my_robot_brightup/world/house/house/: model.sdf
src/my_robot_brightup/world/house1/: model.sdf
src/my_robot_brightup/world/room/: model.sdf
src/my_robot_brightup/world/small_house/: model.sdf
src/nav2_ipso_planner/: CMakeLists.txt  ipso_planner.xml  package.xml
src/nav2_ipso_planner/include/nav2_ipso_planner/: TrajectoryGeneration.hpp  ipso.hpp  ipso_planner.hpp
src/nav2_ipso_planner/params/: ipso_planner.yaml
src/nav2_ipso_planner/src/: TrajectoryGeneration.cpp  ipso.cpp  ipso_planner.cpp
src/nav2_pso_planner/: CMakeLists.txt  package.xml  pso_planner.xml
src/nav2_pso_planner/include/nav2_pso_planner/: TrajectoryGeneration.hpp  pso.hpp  pso_planner.hpp
src/nav2_pso_planner/params/: pso_planner.yaml
src/nav2_pso_planner/src/: TrajectoryGeneration.cpp  pso.cpp  pso_plan_node.cpp  pso_planner.cpp
