<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_pso_planner</name>
  <version>1.1.18</version>
  <description>Particle Swarm Optimization (PSO) Global Planner for Nav2</description>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <maintainer email="anshumaan567@gmail.com">Anshumaan Singh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>nav2_common</depend>
  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>  
  <depend>nav2_util</depend>       
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>   

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/pso_planner.xml" />
  </export>
</package>
